--- a/configs/callbacks/default.yaml
+++ b/configs/callbacks/default.yaml
@@ -1,17 +1,18 @@
 model_checkpoint:
     _target_: pytorch_lightning.callbacks.ModelCheckpoint
-    monitor: "val/acc" # name of the logged metric which determines when model is improving
+    monitor: "val/f1" # name of the logged metric which determines when model is improving
     mode: "max" # can be "max" or "min"
     save_top_k: 1 # save k best models (determined by above metric)
     save_last: True # additionaly always save model from last epoch
     verbose: False
     dirpath: "checkpoints/"
-    filename: "epoch_{epoch:03d}"
+    filename: "{epoch:02d}-val_f1-{val/f1:.2f}"
     auto_insert_metric_name: False
+    save_weights_only: True
 
 early_stopping:
     _target_: pytorch_lightning.callbacks.EarlyStopping
-    monitor: "val/acc" # name of the logged metric which determines when model is improving
+    monitor: "val/f1" # name of the logged metric which determines when model is improving
     mode: "max" # can be "max" or "min"
-    patience: 100 # how many epochs of not improving until training stops
+    patience: 10 # how many epochs of not improving until training stops
     min_delta: 0 # minimum change in the monitored metric needed to qualify as an improvement
