--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -3,8 +3,9 @@
 # specify here default training configuration
 defaults:
     - trainer: default.yaml
-    - model: mnist_model.yaml
-    - datamodule: mnist_datamodule.yaml
+    - model: spanclf_with_gazetteer.yaml
+    - taskmodule: spanclf_with_gazetteer.yaml
+    - datamodule: multi_coner_en.yaml
     - callbacks: default.yaml # set this to null if you don't want to use callbacks
     - logger: null # set logger here or use command line (e.g. `python run.py logger=wandb`)
 
@@ -40,4 +41,6 @@ ignore_warnings: True
 
 # check performance on test set, using the best model achieved during training
 # lightning chooses best model based on metric specified in checkpoint callback
-test_after_training: True
+test_after_training: False
+
+seed: 42
