--- a/setup.cfg
+++ b/setup.cfg
@@ -16,6 +16,8 @@ show_source = True
 format = pylint
 ignore =
     F401  # Module imported but unused
+    E203  # Whitespace before :
+    W503  # Line break occurred before a binary operator
     W504  # Line break occurred after a binary operator
     F841  # Local variable name is assigned to but never used
     F403  # from module import *
