Remove hardcoded data_dir

--- a/configs/datamodule/multi_coner_en.yaml
+++ b/configs/datamodule/multi_coner_en.yaml
@@ -1,6 +1,6 @@
 _target_: src.datamodules.multiconer_datamodule.MultiCoNERDataModule
 
-data_dir: /home/christoph/Downloads/training_data/
+data_dir: ???
 name: en
 batch_size: 32
 num_workers: 0
