--- a/configs/hparams_search/multi_coner_optuna.yaml
+++ b/configs/hparams_search/multi_coner_optuna.yaml
@@ -25,7 +25,7 @@ hydra:
         direction: maximize
 
         # number of experiments that will be executed
-        n_trials: 20
+        n_trials: 30
 
         # choose Optuna hyperparameter sampler
         # learn more here: https://optuna.readthedocs.io/en/stable/reference/samplers.html
@@ -45,7 +45,7 @@ hydra:
         search_space:
             datamodule.batch_size:
                 type: categorical
-                choices: [16, 32, 64]
+                choices: [16, 32]
             model.learning_rate:
                 type: float
                 low: 1e-5
@@ -53,4 +53,17 @@ hydra:
             model.task_learning_rate:
                 type: float
                 low: 1e-5
-                high: 1e-4
+                high: 5e-4
+            model.augment_input:
+                type: categorical
+                choices: [False, True]
+            model.augment_input_prob:
+                type: float
+                low: 0.1
+                high: 0.5
+            model.mlp_hidden_dim:
+                type: categorical
+                choices: [128, 256, 512, 1024]
+            model.mlp_num_layers:
+                type: categorical
+                choices: [1, 2]
