--- a/configs/experiment/baseline_language_model.yaml
+++ b/configs/experiment/baseline_language_model.yaml
@@ -18,6 +18,7 @@ model:
     use_language_model: True
     use_span_length_embedding: True
     wiki_to_vec_file: null
+    augment_input: False
 
 taskmodule:
     gazetteer_path: null
